cabal-version: 2.4

name:           purescript-cst
version:        0.1.0.0
synopsis:       PureScript Programming Language Concrete Syntax Tree
description:    The surface syntax of the PureScript Programming Language.
category:       Language
stability:      experimental
homepage:       http://www.purescript.org/
bug-reports:    https://github.com/purescript/purescript/issues
author:         Phil Freeman <paf31@cantab.net>
maintainer:     Gary Burgess <gary.burgess@gmail.com>, Hardy Jones <jones3.hardy@gmail.com>, Harry Garrood <harry@garrood.me>, Christoph Hegemann <christoph.hegemann1337@gmail.com>, Liam Goodacre <goodacre.liam@gmail.com>, Nathan Faubion <nathan@n-son.com>

copyright:      (c) 2013-17 Phil Freeman, (c) 2014-19 Gary Burgess, (c) other contributors (see CONTRIBUTORS.md)
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    tests/purs/**/*.out
    tests/purs/**/*.purs
    README.md

source-repository head
  type: git
  location: https://github.com/purescript/purescript

common defaults
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveGeneric
    DerivingStrategies
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    PatternGuards
    PatternSynonyms
    RankNTypes
    RecordWildCards
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns
  build-depends:
    array >=0.5.4.0 && <0.6,
    base >=4.14.1.0 && <4.15,
    containers >=0.6.2.1 && <0.7,
    dlist >=0.8.0.8 && <0.9,
    purescript-ast >=0.1.0.0 && <0.2,
    scientific >=0.3.6.2 && <0.4,
    semigroups >=0.19.1 && <0.20,
    text >=1.2.4.1 && <1.3
  build-tool-depends:
    happy:happy ==1.20.0

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Language.PureScript.CST.Convert
    Language.PureScript.CST.Errors
    Language.PureScript.CST.Flatten
    Language.PureScript.CST.Layout
    Language.PureScript.CST.Lexer
    Language.PureScript.CST.Monad
    Language.PureScript.CST.Parser
    Language.PureScript.CST.Positions
    Language.PureScript.CST.Print
    Language.PureScript.CST.Traversals
    Language.PureScript.CST.Traversals.Type
    Language.PureScript.CST.Types
    Language.PureScript.CST.Utils
  other-modules:
    Data.Text.PureScript
    Paths_purescript_cst
  autogen-modules:
    Paths_purescript_cst

test-suite tests
  import: defaults
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    TestCst
    Paths_purescript_cst
  build-depends:
    base-compat,
    purescript-cst,
    bytestring,
    filepath,
    tasty,
    tasty-golden,
    tasty-quickcheck
